config-root/namespaces/jx-staging/gow-new-1/gow-new-1-gow-new-1-deploy.yaml
# Source: gow-new-1/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gow-new-1-gow-new-1
  labels:
    draft: draft-app
    chart: "gow-new-1-0.0.15"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'gow-new-1'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: gow-new-1-gow-new-1
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: gow-new-1-gow-new-1
    spec:
      serviceAccountName: gow-new-1-gow-new-1
      containers:
      - name: gow-new-1
        image: "ghcr.io/hazem-internship/gow-new-1:0.0.15"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
      - name: "tekton-container-registry-auth"
